Makefile: ensure ./bin folder exists before it is needed
Signed-off-by: Nicolas Dechesne <nicolas.dechesne@linaro.org>

--- a/DragonBoard/Makefile
+++ b/DragonBoard/Makefile
@@ -66,6 +66,7 @@ COMPILER_FLAGS += $(LOG_FLAGS)
 MAKE_CMD = $(CC) $(SRC_FILES) $(COMPILER_FLAGS) -o $(APP_DIR)/$(APP_NAME) $(LD_FLAG) $(EXTERNAL_LIBS) $(INCLUDE_ALL_DIRS)
 
 all:
+	$(DEBUG)mkdir -p $(APP_DIR)
 	$(DEBUG)$(MAKE_CMD)
 	
 clean:
